[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Misc/VersionLabel.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Misc/CopyrightLabel.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Cabin-Italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/RandomMusicPlayer.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The main menu of the game."
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 438.0
margin_top = 210.0
margin_right = 585.0
margin_bottom = 390.0

[node name="SingleplayerButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 26.0
text = "Singleplayer"

[node name="HostGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 147.0
margin_bottom = 56.0
text = "Host Game"
__meta__ = {
"_editor_description_": ""
}

[node name="JoinContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 147.0
margin_bottom = 90.0

[node name="RoomCodeEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
align = 1
max_length = 4
placeholder_text = "ABCD"

[node name="JoinGameButton" type="Button" parent="CenterContainer/VBoxContainer/JoinContainer"]
margin_left = 64.0
margin_right = 147.0
margin_bottom = 30.0
text = "Join Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 147.0
margin_bottom = 120.0
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 147.0
margin_bottom = 150.0
text = "Credits"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 147.0
margin_bottom = 180.0
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CreditsDialog" type="WindowDialog" parent="."]
margin_right = 512.0
margin_bottom = 300.0
window_title = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" type="RichTextLabel" parent="CreditsDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/italics_font = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 243.0
margin_bottom = 150.0
window_title = "Error"
dialog_autowrap = true

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 40.0
grow_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Automatically displays the name and version of the game based on the project settings."
}

[node name="CopyrightLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
grow_horizontal = 0
grow_vertical = 0
align = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Automatically displays the first line of the description of the game in the project settings."
}

[node name="RandomMusicPlayer" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HostGameButton" to="." method="_on_HostGameButton_pressed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/JoinContainer/RoomCodeEdit" to="." method="_on_RoomCodeEdit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="locale_changed" from="OptionsMenu" to="." method="_on_OptionsMenu_locale_changed"]
